@@ -1,183 +1,0 @@
-/* XPM */
-static char *knights[] = {
-/* columns rows colors chars-per-pixel */
-"32 32 145 2 ",
-"   c #9C5D2E",
-".  c #9F602F",
-"X  c #9D6135",
-"o  c #A5622E",
-"O  c #AA652D",
-"+  c #AC692E",
-"@  c #B2672A",
-"#  c #B46A2D",
-"$  c #BA6C2F",
-"%  c #BC702D",
-"&  c #A46435",
-"*  c #AA6634",
-"=  c #A66937",
-"-  c #AD6935",
-";  c #A56B3D",
-":  c #AB6E3B",
-">  c #B26731",
-",  c #B46C32",
-"<  c #B96E31",
-"1  c #B67033",
-"2  c #BB7332",
-"3  c #B3733B",
-"4  c #BB763F",
-"5  c #BC793B",
-"6  c #C16F2C",
-"7  c #C3732E",
-"8  c #CC772B",
-"9  c #C6782F",
-"0  c #CA7A2E",
-"q  c #D17D2D",
-"w  c #C17531",
-"e  c #C47830",
-"r  c #CB7C31",
-"t  c #C0763C",
-"y  c #C47A3D",
-"u  c #CB7F3D",
-"i  c #9E6B42",
-"p  c #906E54",
-"a  c #8F755E",
-"s  c #9E7858",
-"d  c #A16D43",
-"f  c #AA6E45",
-"g  c #AE7145",
-"h  c #A5714C",
-"j  c #A97449",
-"k  c #B47343",
-"l  c #B87642",
-"z  c #B57A47",
-"x  c #BA7942",
-"c  c #B47A4A",
-"v  c #B97C4C",
-"b  c #AA7752",
-"n  c #A57C5C",
-"m  c #A87C5D",
-"M  c #B67F51",
-"N  c #997F6C",
-"B  c #A77F62",
-"V  c #C37D40",
-"C  c #CB823E",
-"Z  c #D3863D",
-"A  c #BF814B",
-"S  c #A9805A",
-"D  c #B6845B",
-"F  c #BC875F",
-"G  c #BB895D",
-"H  c #9F856C",
-"J  c #8C827A",
-"K  c #9A8271",
-"L  c #9F8A76",
-"P  c #9A8779",
-"I  c #A08164",
-"U  c #A2856D",
-"Y  c #BE8D64",
-"T  c #BD906B",
-"R  c #A4907E",
-"E  c #C08555",
-"W  c #C38C5D",
-"Q  c #C18E63",
-"!  c #C79263",
-"~  c #CA9664",
-"^  c #CEA176",
-"/  c #8E8782",
-"(  c #8C8986",
-")  c #9E9D9B",
-"_  c #AE9B8A",
-"`  c #BA9D87",
-"'  c #A69F99",
-"]  c #ADA095",
-"[  c #A4A19E",
-"{  c #ABA199",
-"}  c #B5A89C",
-"|  c #A0A0A0",
-" . c #ACA7A2",
-".. c #ADA9A6",
-"X. c gray66",
-"o. c #B5B0AC",
-"O. c #BDB3AB",
-"+. c #B3B3B3",
-"@. c #BDB7B3",
-"#. c #BBB8B6",
-"$. c #BBBABA",
-"%. c #C3A084",
-"&. c #CAA383",
-"*. c #CAAF9A",
-"=. c #CAB19C",
-"-. c #D4B69C",
-";. c #C6B1A1",
-":. c #CCBAAE",
-">. c #D1B5A0",
-",. c #D5B8A3",
-"<. c #D9BBA2",
-"1. c #D6BDAA",
-"2. c #DDBFA8",
-"3. c #C3BAB3",
-"4. c #CFBEB1",
-"5. c #C0BEBD",
-"6. c #DCC2AC",
-"7. c #D2C0B2",
-"8. c #D9C3B2",
-"9. c #D2C5BB",
-"0. c #E3C5AB",
-"q. c #E0C8B8",
-"w. c #C3C2C2",
-"e. c #CBC7C3",
-"r. c #CDCDCD",
-"t. c #D5CDC6",
-"y. c #D9CEC3",
-"u. c #D5D1CE",
-"i. c #D5D5D4",
-"p. c #D9D4D1",
-"a. c #DFDBD7",
-"s. c #DADADA",
-"d. c #E5D5C9",
-"f. c #E9DBCF",
-"g. c #E3DBD4",
-"h. c #E8DDD4",
-"j. c #E2DDD9",
-"k. c #E8E0DA",
-"l. c #E5E5E5",
-"z. c gray92",
-"x. c #F3EFEA",
-"c. c #F6F2EF",
-"v. c #F4F4F4",
-"b. c #F8F7F6",
-"n. c #FEFEFE",
-/* pixels */
-"f 3 k g g g f f g k k g g g k x z k k g g g g f g k g k g g g v ",
-"X > > , , < , > , , - * - , , - - - > > , , , , > , , * > * 3 k ",
-"O # $ > > - - > , , , < , , < l $ $ < $ > > > , , , , , $ $ $ V ",
-"@ $ $ > * & = - < 1 1 + & > W <.V $ $ $ * = X * , < < 3 * & < Z ",
-"O , < < * * * > < , , v 1.k.n.n.v.9.l $ , * * = 1 < < , , , < l ",
-"X , < - X X & ; , , 3 ,.n.n.n.n.n.b.&.< & X X & : + , , , , 1 x ",
-"+ , , , 1 , , 3 G *.d.n.n.n.n.n.n.n.x.%.< , , 3 , < 1 1 2 2 5 C ",
-"O , 2 e 2 2 2 G f.b.n.n.n.n.n.n.n.n.n.g.1 2 2 2 w 2 < 2 0 0 0 C ",
-"% 0 0 0 r 0 V y.n.n.n.n.n.n.b.n.n.n.n.n.^ r e 2 2 e e w e r e C ",
-"@ e r 0 9 2 c 7.n.n.z.z.v.k.=.j.n.n.n.n.-.y 1 , % 2 2 < < 2 < x ",
-"o 1 1 1 2 < , , T D * = * - c y.n.n.n.n.0.4 , , , , = - * = 1 z ",
-"+ % % % < < < 1 , - * & * , M g.n.n.n.n.f.E < < , , = = = - , x ",
-"o 1 , , = , , , , = & X * < <.b.n.n.n.n.v.;.> , , > * X o > < V ",
-"# 0 7 * & = , 1 , , * * > F c.n.n.n.n.n.b.4.3 , 2 , - - > > > V ",
-". - , < < $ > , , , , , F h.n.n.n.n.n.n.v.1.> > , , > , > > $ l ",
-"o + + - - * > * * * = * *.b.n.n.n.n.n.n.v.t.* * - = * = - * > l ",
-"& > * & * = & > , * & * 8.n.n.n.n.n.n.n.v.l.h * - - * & > * * k ",
-". > * - * & & * = * * o q.n.n.n.n.n.n.n.z.l.B & * * * & & = * l ",
-". > > $ > , , > > , , , p.n.n.n.n.n.b.v.z.i.j , > > > , , > 3 k ",
-"O > $ > > , , , < $ , - ` :.0.0.0.6.,.>.>.%.> > < < < , > > $ V ",
-"> 6 $ , = & & , < , 1 , d H } #.5.w.w.@._ K X = , 1 1 , - - w C ",
-"O < < $ > = * = < , , , 1 i [ 5.i.i.r.$.P d = = , 1 , , , , 1 x ",
-"& , , * X X = = - , , < 3 R s.b.n.n.n.b.5.K & = - 3 , , < , 1 x ",
-"o - - , 1 , 1 1 1 - 1 < S +.z.b.n.n.n.b.s...- 1 1 , , , 2 w 5 V ",
-"# w 8 9 % % 9 % w w w 5 { r.v.n.n.n.n.n.l.r.L 5 e w w w q Z 0 Z ",
-"# 0 8 Z Z 8 2 % w e 3 U $.s.z.b.n.n.b.b.l.i...I w w w w w r 0 u ",
-"+ 2 2 2 % 1 1 1 , 1 s [ i.l.b.b.b.b.b.b.v.l.w.) ; 1 , - , , - k ",
-"o 1 2 2 1 2 1 + , = p ( X.o.+.$.$.$.$.$.+.+.| / i + = & X = , x ",
-"O < < < 1 , < < , - J { 3.e.p.g.j.a.j.a.u.e.O.] a * * = * # < V ",
-"@ w 7 # = , 1 # 1 - i h b m F Y T ! ~ Q m n c z 3 , = & * - , V ",
-"O 6 # * - - + 1 # > , > > > # $ $ $ 7 , - - - , , , > > > > > l ",
-"  o o O o o o * . o o o * o o . o   o o o o o o o o o O o O O : "
-};
