@@ -2,12 +2,7 @@
 
 DEB_KDE_LINK_WITH_AS_NEEDED := yes
 DEB_CMAKE_EXTRA_FLAGS += -DBIN_INSTALL_DIR=/usr/games
-DEB_DH_INSTALL_ARGS_knights += debian/knights.xpm /usr/share/pixmaps
 DEB_DH_STRIP_ARGS = --dbg-package=knights-dbg
 
 include /usr/share/pkg-kde-tools/makefiles/1/cdbs/kde.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
-
-debian/knights.xpm: icons/hi32-app-knights.png
-	convert $< $@
-
